5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1616_2921.log
== TEST (2019-04-01 15:16:57) 
-- CODE:
jogo1 = int(input("preco do primeiro jogo: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:50) 
-- CODE:
jogo1 = float(input("preco do primeiro jogo: "))
jogo2 = float(input("preco do segundo jogo: "))
total 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total 
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:48) 
-- CODE:
jogo1 = int(input("preco do primeiro jogo: "))
jogo2 = int(input("preco do segundo jogo: "))
total = input("jogo1 + jogo2")
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:43) 
-- CODE:
jogo1 = int(input("preco do primeiro jogo: "))
jogo2 = int(input("preco do segundo jogo: "))
total = input("jogo1 + jogo2")
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totalJogo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:54) 
-- CODE:
jogo1 = int(input("preco do primeiro jogo: "))
jogo2 = int(input("preco do segundo jogo: "))
total = input("jogo1 + jogo2")
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totalJogo2)
-- EXECUTION TIME:
0.183741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:47) 
-- CODE:
precojogo1 = int(input("preco do primeiro jogo: "))
precojogo2 = int(input("preco do segundo jogo: "))

totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100
-- ERROR:
File "XXXX", line 5
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:17) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:53) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:55) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:56) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:14) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:02) 
-- CODE:
precojogo1 = int(input(round("jogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
File "XXXX", line 2
    precojogo2 = int(input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:34:07) 
-- CODE:
precojogo1 = int(input(round("jogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- EXECUTION TIME:
0.210428
-- ERROR:
  File "/home/codebench/codes/1616/2921/main.py", line 2
    precojogo2 = int(input())
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:15) 
-- CODE:
precojogo1 = input(round("jogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = input(round("jogo1: ", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:36) 
-- CODE:
precojogo1 = input(round("precojogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = input(round("precojogo1: ", 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:00) 
-- CODE:
precojogo1 = round(input("precojogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("precojogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:13) 
-- CODE:
precojogo1 = round("precojogo1: ", 2))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
File "XXXX", line 1
    precojogo1 = round("precojogo1: ", 2))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:25) 
-- CODE:
precojogo1 = round("precojogo1: ", 2)
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round("precojogo1: ", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:57) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:09) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:30) 
-- CODE:
precojogo1 = float(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    precojogo2 = int(input())
ValueError: invalid literal for int() with base 10: '89.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:40) 
-- CODE:
precojogo1 = float(input("jogo1: "))
precojogo2 = float(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
print(totaljogo2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:25) 
-- CODE:
precojogo1 = float(input("jogo1: "))
precojogo2 = float(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:41:10) 
-- CODE:
precojogo1 = float(input("jogo1: ", 2))
precojogo2 = float(input("jogo2: ", 2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = float(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:41:33) 
-- CODE:
precojogo1 = float(input("jogo1: "))
precojogo2 = float(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:41:52) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:00) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.133763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:01) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:02) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.13839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:02) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:03) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:03) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:04) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.128007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:30) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:43) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:42:45) 
-- CODE:
precojogo1 = float(input("jogo1:50 "))
precojogo2 = float(input("jogo2:100 "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.20244
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 3, in <module>
    totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:26) 
-- CODE:
precojogo1 = float(input("jogo1: "))
precojogo2 = round(input("jogo2: ",2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    precojogo2 = round(input("jogo2: ",2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:46) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:54) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",n2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:55) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",n2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.156565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:55) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",n2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:55) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",n2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.18249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:56) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",n2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.113755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:59) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ",2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:44:02) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ", 2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- EXECUTION TIME:
0.146151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:03) 
-- CODE:
precojogo1 = round(input("jogo1: ", 2))
precojogo2 = round(input("jogo2: ", 2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round(input("jogo1: ", 2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:19) 
-- CODE:
precojogo1 = round("jogo1: ", 2))
precojogo2 = round("jogo2: ", 2))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
File "XXXX", line 1
    precojogo1 = round("jogo1: ", 2))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:28) 
-- CODE:
precojogo1 = round("jogo1: ", 2)
precojogo2 = round("jogo2: ", 2)
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(totalJogo2)
print(compras)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = round("jogo1: ", 2)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:32) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
print(float(totalJogo2)
print(compras)

-- ERROR:
File "XXXX", line 6
    print(compras)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:36) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
total= input(totalJogos2 + compras) 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:51:46) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
total= input(totalJogos2 + compras) 
print(total)

-- EXECUTION TIME:
0.128662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2921/main.py", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:50) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = input(totalJogo2 + precojogo1) 
total= input(totalJogos2 + compras) 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:29) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = (totalJogo2 + precojogo1) 
total = (totalJogos2 + compras) 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:38) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = (totalJogo2 + precojogo1) 
total = (totalJogos2 + compras) 
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:05) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = (totalJogo2 + precojogo1) 
total = (totalJogos2 + compras) 
print(float(total))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:53:55) 
-- CODE:
precojogo1 = int(input("jogo1: "))
precojogo2 = int(input("jogo2: "))
totalJogo2 = precojogo2 - (precojogo2 * (desconto25 / 100))
compras = (totalJogo2 + precojogo1) 
total = (totalJogos2 + compras) 
print(float(total))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precojogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
